spark/test-nvidia-runtime.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-nvidia-runtime
spec:
  runtimeClassName: nvidia
  containers:
  - name: test
    image: docker.io/tiendat2807/spark-gpu:v0.6.0
    command: ["nvidia-smi"]
    resources:
      limits:
        nvidia.com/gpu: 1
  restartPolicy: Never
