spark/spark-history-server.yaml
# spark-history-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history-server
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-history-server
  template:
    metadata:
      labels:
        app: spark-history-server
    spec:
      containers:
      - name: history-server
        # Use a standard Spark image
        image: docker.io/tiendat2807/spark-history-server:v0.1
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.history.HistoryServer"]
        ports:
        - containerPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server-svc
  namespace: spark
spec:
  selector:
    app: spark-history-server
  ports:
  - protocol: TCP
    port: 18080
    targetPort: 18080
